Revert "W-17245993: Remove SOAP service (#491)"
This reverts commit 75d790e69a5bf676f2db4e8a69230c30a35bffd0.